# notifications_rust

infra/: .env  docker-compose.yaml  run_infra  stop_infra
infra/postgres/: init.sql
migration/: Cargo.toml
migration/migrations/: V1__initial.sql
migration/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs  router.rs  server.rs
server/src/db/: accessor.rs  mod.rs
