[package]
name = "server"
version = "0.1.0"
authors = ["Andrew Visokih <andrew.visokih@capsilon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.6.0"
tokio = { version = "0.3.5", features = ["full"] }
deadpool-postgres = "0.6.0"
once_cell = "1.3.1"

actix-web = "3"
actix-files = "0.4.0"
actix-cors = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
env_logger = "0.6.0"
